--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <!DOCTYPE html><html lang="pt-br">
+	  <head>
+		  <meta charset="UTF-8">
+		  <title>Formulário com Seletores de Atributos</title>
+		  <link rel="stylesheet" href="style.css">
+	  </head>
+	<body>
+        
+    
+    <div class="footer-container">
+      <p>
+        Maria Heloisa Lopes, Natieli Alves Lopes Motta, Eduardo e Ryan
+      </p>
+    </div>
+  </footer>
+</body>
+
+</html>
