--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <div class="footer-container">
       <p>
-        Maria Heloisa Lopes, Natieli Alves Lopes Motta, Eduardo e Ryan
+        Maria Heloisa Lopes, Natieli Alves Lopes Motta, Eduardo Galacha Neitzel Oliveira e Ryan Xavier Garcia JUnior
       </p>
     </div>
   </footer>
