--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html><html lang="pt-br">
 	  <head>
-		  <nav> </nav>
-		  <main> </main>
-		  <footer> </footer>
-
+		  <nav> 
+		  </nav>
 		  
+		  <main>		  
 		  <meta charset="UTF-8">
 		  <title>Formulário com Seletores de Atributos</title>
 		  <link rel="stylesheet" href="style.css">
@@ -15,12 +14,12 @@
 		<p>bla bla bla</p>
 		<p>bla bla bla</p>
 	</header>    
-    
-    <div class="footer-container">
+    </main>
+
+<footer>
       <p>
         Maria Heloisa Lopes, Natieli Alves Lopes Motta, Eduardo Galacha Neitzel Oliveira e Ryan Xavier Garcia JUnior
       </p>
-    </div>
   </footer>
 </body>
 
