--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html><html lang="pt-br">
 	  <head>
-		  <nav> 
-		  </nav>
-		  
 		  <main>		  
 		  <meta charset="UTF-8">
 		  <title>Formulário com Seletores de Atributos</title>
 		  <link rel="stylesheet" href="style.css">
 	  </head>
+<nav>
+  <ul>
+    <li><a href="#">Página inicial</a></li>
+    <li><a href="#">Sobre</a></li>
+	<li><a href="#">Preços</a></li>
+    <li><a href="#">Contato</a></li>
+  </ul>
+</nav>
 	<body>
     <header> 
 		<p>bla bla bla</p>
