--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html><html lang="pt-br">
-	  <head>
-		  <main>		  
+	  <head>		  
 		  <meta charset="UTF-8">
-		  <title>Formulário com Seletores de Atributos</title>
+		  <title>Principais Orientações a Objeto</title>
 		  <link rel="stylesheet" href="style.css">
 	  </head>
-<nav>
-  <ul>
-    <li><a href="#">Página inicial</a></li>
-    <li><a href="#">Sobre</a></li>
-	<li><a href="#">Preços</a></li>
-    <li><a href="#">Contato</a></li>
-  </ul>
-</nav>
+
 	<body>
     <header> 
+		<nav>
+			  <ul>
+			    <li><a href="#">inicio</a></li>
+			    <li><a href="#">Sobre</a></li>
+				<li><a href="#">blabla</a></li>
+			    <li><a href="#">Contato</a></li>
+			  </ul>
+			</nav>
+	</header>  
+	<main>
+
 		<p>bla bla bla</p>
 		<p>bla bla bla</p>
 		<p>bla bla bla</p>
-	</header>    
     </main>
 
 <footer>
