--- a/index.html
+++ b/index.html
@@ -1,33 +1,100 @@
-<!DOCTYPE html><html lang="pt-br">
-	  <head>		  
-		  <meta charset="UTF-8">
-		  <title>Principais Orientações a Objeto</title>
-		  <link rel="stylesheet" href="style.css">
-	  </head>
+<!DOCTYPE HTML>
+<html lan="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <title>ILHA DAS CAIEIRAS</title>
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    </head>
 
-	<body>
-    <header> 
-		<nav>
-			  <ul>
-			    <li><a href="#">inicio</a></li>
-			    <li><a href="#">Sobre</a></li>
-				<li><a href="#">blabla</a></li>
-			    <li><a href="#">Contato</a></li>
-			  </ul>
-			</nav>
-	</header>  
-	<main>
+    <body>
+        <div id="conteudo">
+            <header>
+                <h1>Conceitos a Orientada a Objetos</h1>
 
-		<p>bla bla bla</p>
-		<p>bla bla bla</p>
-		<p>bla bla bla</p>
-    </main>
+                <div id="catalogo">
+                    <a href="#">Início</a>
+                    <a href="#">Sobre</a>
+                    <a href="#">Conteúdo</a>
+                    <a href="#">Contato</a>
+                </div>
+            </header>
 
-<footer>
-      <p>
-        Maria Heloisa Lopes, Natieli Alves Lopes Motta, Eduardo Galacha Neitzel Oliveira e Ryan Xavier Garcia JUnior
-      </p>
-  </footer>
-</body>
+            <main>
+                <div id="textos">
+                    <h2>Os principais conceitos da Orientada a Objetos</h2>
 
+
+                     <h3>  
+                        Classes, Objetos, Encapsulamento, Herança e Polimorfismo.
+                     </h3>
+
+                    <p id="texto1"> 
+                        A orientação a objetos é uma maneira de pensar nos problemas utilizando modelos organizados a partir do mundo real.
+                        Em orientação a objetos, um objeto é uma instância de uma classe, representando uma entidade do mundo real 
+                        ou um conceito abstrato, que combina dados (atributos) e comportamentos (métodos). É a unidade fundamental 
+                        da programação orientada a objetos, utilizada para modelar sistemas complexos de maneira mais intuitiva e organizada. 
+                    </p>
+                    <p>
+                        Classe:
+                        Um modelo ou "planta" que define as características e comportamentos que um objeto terá. 
+                    </p>
+
+                    <p>
+                        Atributos:
+                        Variáveis que armazenam os dados de um objeto, representando suas características. 
+                    </p>
+                    <p>
+                        Métodos:
+                        Funções que definem o comportamento de um objeto, ou seja, as ações que ele pode realizar. 
+                    </p>
+                    <p>
+                        Exemplo:
+                        Imagine um objeto "carro". A classe "Carro" definiria atributos como cor, modelo, 
+                        marca e métodos como acelerar, frear, ligar, desligar. Cada carro específico 
+                        (ex: um carro vermelho, modelo X, marca Y) seria um objeto da classe "Carro", utilizando o modelo definido pela classe,
+                         mas com seus próprios valores para os atributos.  
+                    </p>
+                    <p>
+                        Importância na programação:
+                        A orientação a objetos facilita a modelagem de sistemas complexos, tornando o código mais modular, 
+                        reutilizável e fácil de entender. A utilização de objetos permite que o desenvolvedor pense em termos de 
+                        entidades do mundo real, 
+                        tornando o processo de desenvolvimento mais intuitivo. 
+                    </p>
+                    <p>
+                        Abstração:
+                        Simplificação de conceitos complexos, focando nos aspectos essenciais. 
+                    </p>
+                    <p>
+                        Encapsulamento:
+                        Ocultação dos detalhes internos de um objeto, protegendo seus atributos e métodos.  
+                    </p>
+                    <p>
+                        Herança:
+                        Capacidade de uma classe herdar características e comportamentos de outra, promovendo a reutilização de código. 
+                    </p>
+                    <p>
+                        Polimorfismo:
+                        Capacidade de objetos de diferentes classes responderem de maneira diferente a um mesmo método.  
+                    </p>
+                    <p>
+                        Em resumo, um objeto na orientação a objetos é uma entidade que combina dados e comportamentos, 
+                        sendo uma instância de uma classe, e desempenha um papel crucial na modelagem e organização de sistemas de software. 
+                    </p>
+
+                <div id="imagens-direita">
+                    <img id="imagem1" src="Imagens-posts-blog-47-1920x1280.jpg" alt="imagem1">
+                    <img id="imagem2" src="microsoft-bosque-programming-language-1.webp" alt="imagem2">
+                </div>
+            <footer>
+                <p id="footer">
+                    Maria Heloisa Lopes, Natieli Alves Lopes Motta, Eduardo Galacha Neitzel Oliveira e Ryan Xavier Garcia Junior 3º02 IPI
+                </p>
+            </footer>        
+
+            </main>
+        </div> 
+    </body>
 </html>
